# Data-Analyze-Tool

./: Data Wrangling.ipynb  LICENSE  README.md  __init__.py  core.py  data_analysis_cookbook_colab.ipynb  extracted_numeric_data.csv  my_categorical_output.csv  my_numeric_output.csv  pyproject.toml  quickstart.ipynb
Assignment 6/: Assignment_6.ipynb
data_analysis/: __init__.py  core.py
