[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "data-wrangling-tool"
version = "1.0.0"
description = "A robust Python toolkit for data wrangling, feature engineering, interactive visualisation, and statistical association analysis — optimised for Google Colab."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.9"

dependencies = [
    "pandas>=1.5",
    "numpy>=1.23",
    "scipy>=1.9",
    "scikit-learn>=1.1",
    "ipython>=7.0",
    "openpyxl>=3.0",
]

[project.optional-dependencies]
plotting = [
    "plotly>=5.10",
    "statsmodels>=0.13",   # required for OLS trendline in px.scatter
]
full = [
    "plotly>=5.10",
    "statsmodels>=0.13",
    "pyarrow>=10.0",       # parquet support
]

[project.urls]
Homepage = "https://github.com/your-org/data-wrangling-tool"
Issues   = "https://github.com/your-org/data-wrangling-tool/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["data_wrangling*"]
