[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "data-analysis-tool"
version = "0.1.0"
description = "A local toolkit for data exploration and clean workflows in Jupyter."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.9"
authors = [
  { name = "Mugalan", email = "mugalan@gmail.com" }
]
dependencies = [
  "pandas>=1.3.0",
  "numpy>=1.21.0",
  "scipy>=1.7.0",
  "scikit-learn>=1.0.0",
  "plotly>=5.0.0"
]

[tool.setuptools]
packages = ["data_analysis"]